@@ -854,6 +854,16 @@ objc_comptypes (tree lhs ATTRIBUTE_UNUSED,
   return 0;
 }
 
+/* Should not be called for treelang.  Needed by RS6000 backend.  */
+
+int c_lex (tree *value);
+
+int
+c_lex (tree *value ATTRIBUTE_UNUSED)
+{
+  abort ();
+}
+
 /* Should not be called for treelang.   */
 
 tree
@@ -1273,3 +1283,4 @@ get_string (const char *s, size_t l)
   t = get_identifier_with_length (s, l);
   return IDENTIFIER_POINTER(t);
 }
+
